# google-cloud-gui

./: LICENSE  README.md  cloud.py  dialog.py  main.py  main.spec  menu.py  page.py  pyproject.toml  widget.py  window.py  worker.py
.github/workflows/: build.yml
assets/: style.css
